--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-pdf-tailwind": "^2.2.1",
     "router": "^1.3.8",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
