--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@next/font": "^14.1.0",
+    "chart.js": "^4.4.1",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "dom": "^0.0.3",
     "next": "^14.1.0",
-    "react": "^18",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-pdf-tailwind": "^2.2.1",
     "router": "^1.3.8",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
