--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-pdf-tailwind": "^2.2.1",
+    "react-youtube": "^10.1.0",
     "router": "^1.3.8",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
